Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14720

Crash inside AnsiEscapeCodeHandler::parseText

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 3.5.0-rc1
    • Qt Creator 3.5.0-rc1, Qt Creator 3.6.0-beta1
    • Debugger
    • None
    • 9f29762d345b5f61321bc0fbb740bd9a89a0c658

    Description

      Qt creator crashes when capturing output from a program that can output unfinished control sequence. For example: "\x1b".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            wonder.mice wonder.mice
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes